--- a/src/components/AddTripForm/AddTripForm.module.css
+++ b/src/components/AddTripForm/AddTripForm.module.css
@@ -1,10 +1,16 @@
 
 .container{
-  max-width: 800px;
   background: #fff;
-  width: 500px;
-  padding: 25px 40px 10px 40px;
+  padding: 60px 100px;
   box-shadow: 0px 0px 10px rgba(0,0,0,0.1);
+}
+
+.input{
+  font-size: 12px;
+  line-height: 1.3;
+  display: block;
+  margin-bottom: 4px;
+  width: 100%;
 }
 
 .button{
