--- a/src/components/AddTripForm/AddTripForm.module.css
+++ b/src/components/AddTripForm/AddTripForm.module.css
@@ -1,7 +1,7 @@
 
 .container{
   background: #fff;
-  padding: 60px 100px;
+  padding: 40px 120px;
   box-shadow: 0px 0px 10px rgba(0,0,0,0.1);
 }
 
@@ -11,6 +11,7 @@
   display: block;
   margin-bottom: 4px;
   width: 100%;
+  height: 30px;
 }
 
 .button{
@@ -24,11 +25,27 @@
   cursor: pointer;
   min-width: 100px;
   color: #000000;
-  background-color: #dcb7ed;
+  background-color: #fefcff;
   box-shadow: 0px 3px 1px -2px rgba(0, 0, 0, 0.2),
     0px 2px 2px 0px rgba(0, 0, 0, 0.14), 0px 1px 5px 0px rgba(0, 0, 0, 0.12);
-  }
-  
+}
+
+.button_save{
+  padding: 4px 12px;
+  margin: 20px 10px;
+  border-radius: 2px;
+  border: none;
+  text-align: center;
+  display: inline-block;
+  justify-content: center;
+  cursor: pointer;
+  min-width: 100px;
+  color: #000000;
+  background-color: #00a8e7;
+  box-shadow: 0px 3px 1px -2px rgba(0, 0, 0, 0.2),
+    0px 2px 2px 0px rgba(0, 0, 0, 0.14), 0px 1px 5px 0px rgba(0, 0, 0, 0.12);
+}
+
 .Button:hover,
 .Button:focus {
   background-color: rgb(182, 77, 238);
