--- a/src/components/App.module.css
+++ b/src/components/App.module.css
@@ -1,5 +1,33 @@
+.Navigation{
+  font-size: 18px;
+  font-weight: 500;
+  min-height: 34px;
+  padding-right: 24px;
+  padding-left: 24px;
+  padding-top: 12px;
+  padding-bottom: 12px;
+}
+
+.link{
+  text-decoration: none;
+  color: black;
+  margin-right: 20px;
+  font-family: 'Times New Roman', Times, serif;
+  font-size: 28px;
+  font-weight: 500;
+}
+
 .button{
-  padding: 70px;
+  background-color: #b6d6ef;
+  margin-top: 20px;
+  margin-left: 30px;
+  padding: 10px 20px;
   cursor: pointer;
   border: none;
+  box-shadow: 0px 2px 4px -1px rgba(0, 0, 0, 0.2),
+    0px 4px 5px 0px rgba(0, 0, 0, 0.14), 0px 1px 10px 0px rgba(0, 0, 0, 0.12);
+}
+
+.button :hover{
+  background-color: #5cb2ec;
 }
