--- a/src/pages/Home/Home.module.css
+++ b/src/pages/Home/Home.module.css
@@ -1,8 +1,9 @@
 .button{
-  background-color: #b6d6ef;
+  display: flex;
+  background-color: #eef2f6;
   margin-top: 10px;
   margin-left: 5px;
-  padding: 10px 20px;
+  padding: 80px;
   cursor: pointer;
   border: none;
   box-shadow: 0px 2px 4px -1px rgba(0, 0, 0, 0.2),
@@ -10,5 +11,17 @@
 }
 
 .button:hover{
-  background-color: #5cb2ec;
+  background-color: #bddef5;
+}
+
+.search_trip{
+  border: none;
+  height: 40px;
+  width: 10%;
+  border-radius: 2px;
+  background-color: rgb(236, 236, 236);
+}
+
+.submit{
+  height: 40px;
 }
