--- a/src/pages/TripList/TripList.module.css
+++ b/src/pages/TripList/TripList.module.css
@@ -8,3 +8,7 @@
   box-shadow: 0px 2px 4px -1px rgba(0, 0, 0, 0.1),
     0px 4px 5px 0px rgba(0, 0, 0, 0.1), 0px 1px 10px 0px rgba(0, 0, 0, 0.1);
 }
+
+.btn_delete:hover{
+  background-color: #bddef5;
+}
