--- a/src/components/TripItem/TripItem.module.css
+++ b/src/components/TripItem/TripItem.module.css
@@ -1,12 +1,3 @@
 .trip_item{
-  text-decoration: none;
-  display: flex;
-  flex-wrap: wrap;
-  column-gap: 24px;
-  width: 264px;
-
-}
-
-.date{
-  text-decoration: none;
+  flex-direction: row;
 }
