--- a/src/pages/Home/Home.module.css
+++ b/src/pages/Home/Home.module.css
@@ -3,7 +3,7 @@
   background-color: #eef2f6;
   margin-top: 10px;
   margin-left: 5px;
-  padding: 80px;
+  padding: 20px 40px;
   cursor: pointer;
   border: none;
   box-shadow: 0px 2px 4px -1px rgba(0, 0, 0, 0.2),
@@ -19,7 +19,7 @@
   height: 40px;
   width: 10%;
   border-radius: 2px;
-  background-color: rgb(236, 236, 236);
+  background-color: rgb(245, 245, 245);
 }
 
 .submit{
